examples/valid/07_builtin_expected_type.lane
module Examples.Valid07

import Basic.Io.{println}

pub let host_int : () -> Int = extern("%host_int")

pub let host_value : () -> Int = extern("%host_value")

pub fn answer() -> Unit ! Io {
  println("extern bindings typed")
}
