examples/invalid/47_unqualified_operation_not_found.lane
// invalid: an unqualified operation call must name an operation in the operation namespace
module Examples.Invalid47

effect Console {
  read() -> Int
}

fn answer() -> Int ! Console {
  write!()
}
